# transcription

./: .gitignore  README.md  ai-stack.md  project-adr.md  setup.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py  schemas.py  storage.py  summarize.py  templates.py  transcribe.py
backend/data/templates/: meeting.md  seminar.md  tech-conference.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.ts  recorder.ts  style.css
sample/: 文字起こし.md  要約.md
