[project]
name = "whisper-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "faster-whisper>=1.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.21.1.3",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]
